--- a/singolo3.css
+++ b/singolo3.css
@@ -11,9 +11,13 @@ li {
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 li {
   list-style-type: none;
-  font-size: 0;
+  /* font-size: 0; */
 }
 
 *,
@@ -38,5 +42,224 @@ body {
   max-width: 1020px;
   margin: 0 auto;
   padding: 0 40px;
+}
+
+.quote {
+  background-color: #f06c64;
+  border-bottom: 6px solid #ea676b;
+}
+
+.quote .quote__inner {
+  padding-top: 63px;
+  padding-bottom: 67px;
+}
+
+.quote .quote__inner .quote__title {
+  margin-bottom: 42px;
+}
+
+.quote .quote__inner .quote__title h2 {
+  margin-bottom: 16px;
+  font-family: 'Lato Black', sans-serif;
+  font-size: 3rem;
+  font-weight: 400;
+  letter-spacing: -0.2px;
+  color: #f0d8d9;
+}
+
+.quote .quote__inner .quote__title p {
+  font-family: 'Lato Light', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 300;
+  letter-spacing: -0.05px;
+  line-height: 30px;
+  text-align: justify;
+  color: #f0d8d9;
+}
+
+.quote .quote__inner .quote__info {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.quote .quote__inner .quote__info .quote__info--form {
+  width: 620px;
+  margin-right: 20px;
+}
+
+.quote .quote__inner .quote__info .quote__info--form input {
+  display: block;
+  width: 100%;
+  margin-bottom: 16px;
+  padding-left: 15px;
+  background-color: #d6564f;
+  border: 0;
+  border-radius: 5px;
+  outline: none;
+  font-family: 'Lato Regular', sans-serif;
+  color: #f0d8d9;
+  font-size: 1.2rem;
+  font-weight: 400;
+  letter-spacing: 0.1px;
+  line-height: 36px;
+}
+
+.quote .quote__inner .quote__info .quote__info--form input::-webkit-input-placeholder {
+  color: #f48c8f;
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  letter-spacing: 0.1px;
+}
+
+.quote .quote__inner .quote__info .quote__info--form input:-ms-input-placeholder {
+  color: #f48c8f;
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  letter-spacing: 0.1px;
+}
+
+.quote .quote__inner .quote__info .quote__info--form input::-ms-input-placeholder {
+  color: #f48c8f;
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  letter-spacing: 0.1px;
+}
+
+.quote .quote__inner .quote__info .quote__info--form input::placeholder {
+  color: #f48c8f;
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  letter-spacing: 0.1px;
+}
+
+.quote .quote__inner .quote__info .quote__info--form textarea {
+  display: block;
+  width: 100%;
+  height: 202px;
+  padding-top: 12px;
+  padding-left: 15px;
+  background-color: #d6564f;
+  border: 0;
+  border-radius: 5px;
+  outline: none;
+  resize: none;
+}
+
+.quote .quote__inner .quote__info .quote__info--form textarea::-webkit-input-placeholder {
+  color: #f48c8f;
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  letter-spacing: -0.01px;
+}
+
+.quote .quote__inner .quote__info .quote__info--form textarea:-ms-input-placeholder {
+  color: #f48c8f;
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  letter-spacing: -0.01px;
+}
+
+.quote .quote__inner .quote__info .quote__info--form textarea::-ms-input-placeholder {
+  color: #f48c8f;
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  letter-spacing: -0.01px;
+}
+
+.quote .quote__inner .quote__info .quote__info--form textarea::placeholder {
+  color: #f48c8f;
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  letter-spacing: -0.01px;
+}
+
+.quote .quote__inner .quote__info .quote__info--form button {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 300px;
+  margin: 0;
+  padding: 0 15px;
+  background-color: #d6564f;
+  border: 0;
+  border-radius: 5px;
+  outline: none;
+  font-family: 'Lato Regular', sans-serif;
+  color: #f0d8d9;
+  font-size: 1.2rem;
+  font-weight: 400;
+  letter-spacing: 0.1px;
+  line-height: 36px;
+  cursor: pointer;
+  -webkit-transition: background-color 0.2s linear, color 0.2s linear;
+  transition: background-color 0.2s linear, color 0.2s linear;
+}
+
+.quote .quote__inner .quote__info .quote__info--form button:hover {
+  background-color: #f0d8d9;
+  color: #d6564f;
+}
+
+.quote .quote__inner .quote__info .quote__info--contact {
+  width: 300px;
+}
+
+.quote .quote__inner .quote__info .quote__info--contact h3 {
+  margin-bottom: 8px;
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 900;
+  letter-spacing: 0.35px;
+  color: #f0d8d9;
+}
+
+.quote .quote__inner .quote__info .quote__info--contact p {
+  margin-bottom: 23px;
+  max-width: 298px;
+  color: #f0d8d9;
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  text-align: justify;
+  line-height: 21.9px;
+  letter-spacing: -0.1px;
+}
+
+.quote .quote__inner .quote__info .quote__info--contact address ul {
+  line-height: 20.5px;
+}
+
+.quote .quote__inner .quote__info .quote__info--contact address ul li {
+  padding-left: 23px;
+}
+
+.quote .quote__inner .quote__info .quote__info--contact address ul li:last-child {
+  letter-spacing: 0.1px;
+}
+
+.quote .quote__inner .quote__info .quote__info--contact address ul li a {
+  color: #f0d8d9;
+  font-family: 'Lato regular', sans-serif;
+  font-size: 1.2rem;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.footer {
+  padding: 22px 40px;
+  background-color: #2d303a;
 }
 /*# sourceMappingURL=singolo3.css.map */
