--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ body {
   -webkit-transition: all 0.2s linear;
   transition: all 0.2s linear;
   cursor: pointer;
-  z-index: 999;
+  z-index: 99;
 }
 
 .slider .slider__inner .slider__prev:hover {
@@ -172,7 +172,7 @@ body {
           transform: translateX(-2px) scale(1.1);
   -webkit-transform-origin: center center;
           transform-origin: center center;
-  z-index: 999;
+  z-index: 99;
 }
 
 .slider .slider__inner .slider__prev:active {
@@ -180,7 +180,7 @@ body {
           transform: translateX(0) scale(1);
   -webkit-transform-origin: center center;
           transform-origin: center center;
-  z-index: 999;
+  z-index: 99;
 }
 
 .slider .slider__inner .slider__iphone_main {
@@ -320,7 +320,7 @@ body {
   -webkit-transition: all 0.2s linear;
   transition: all 0.2s linear;
   cursor: pointer;
-  z-index: 999;
+  z-index: 99;
 }
 
 .slider .slider__inner .slider__next:hover {
@@ -328,7 +328,7 @@ body {
           transform: translateX(2px) scale(1.1);
   -webkit-transform-origin: center center;
           transform-origin: center center;
-  z-index: 999;
+  z-index: 99;
 }
 
 .slider .slider__inner .slider__next:active {
@@ -336,7 +336,7 @@ body {
           transform: translateX(0) scale(1);
   -webkit-transform-origin: center center;
           transform-origin: center center;
-  z-index: 999;
+  z-index: 99;
 }
 
 .bg-color {
@@ -620,7 +620,7 @@ body {
   border-color: #c5c5c5;
 }
 
-.portfolio .portfolio__inner .portfolio__list ul .portfolio__list_active {
+.portfolio .portfolio__inner .portfolio__list ul li.active {
   color: #c5c5c5;
   border-color: #c5c5c5;
 }
@@ -657,6 +657,10 @@ body {
 .portfolio .portfolio__inner .portfolio__images ul li img:hover {
   -webkit-filter: opacity(0.7);
           filter: opacity(0.7);
+}
+
+.portfolio .portfolio__inner .portfolio__images ul li img.active {
+  border: 5px solid #f06c64;
 }
 
 .about {
@@ -957,6 +961,7 @@ body {
   font-weight: 400;
   color: #f0d8d9;
   letter-spacing: 0.1px;
+  text-transform: uppercase;
   cursor: pointer;
   -webkit-transition: all 0.2s linear;
   transition: all 0.2s linear;
@@ -1054,6 +1059,154 @@ body {
   font-style: normal;
   font-weight: 400;
   color: #f0d8d9;
+}
+
+.pop-up {
+  position: fixed;
+  z-index: 9999;
+  padding-top: 300px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: none;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.pop-up .pop-up__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.pop-up .pop-up__inner .pop-up__message {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 400px;
+  border-radius: 5px;
+  background-color: #f06c64;
+  -webkit-animation-name: pop-up-zoom;
+          animation-name: pop-up-zoom;
+  -webkit-animation-duration: 0.3s;
+          animation-duration: 0.3s;
+}
+
+.pop-up .pop-up__inner .pop-up__message h3 {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #f0d8d9;
+}
+
+.pop-up .pop-up__inner .pop-up__message .pop-up__message_subject {
+  margin-bottom: 10px;
+}
+
+.pop-up .pop-up__inner .pop-up__message .pop-up__message_subject p {
+  font-family: 'Lato Light', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 300;
+  color: #f0d8d9;
+  display: inline;
+}
+
+.pop-up .pop-up__inner .pop-up__message .pop-up__message_subject p span {
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 300;
+  color: #f0d8d9;
+}
+
+.pop-up .pop-up__inner .pop-up__message .pop-up__message_description {
+  margin-bottom: 40px;
+}
+
+.pop-up .pop-up__inner .pop-up__message .pop-up__message_description p {
+  font-family: 'Lato Light', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 300;
+  color: #f0d8d9;
+}
+
+.pop-up .pop-up__inner .pop-up__message .pop-up__message_description p span {
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 300;
+  color: #f0d8d9;
+}
+
+.pop-up .pop-up__inner .pop-up__message button {
+  margin-bottom: 40px;
+  width: 100px;
+  padding: 12px 15px;
+  background-color: #d6564f;
+  border: 0;
+  border-radius: 5px;
+  outline: none;
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: #f0d8d9;
+  letter-spacing: 0.1px;
+  cursor: pointer;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.pop-up .pop-up__inner .pop-up__message button:hover {
+  background-color: #f0d8d9;
+  color: #d6564f;
+}
+
+.pop-up__hidden {
+  display: none;
+}
+
+@-webkit-keyframes pop-up-zoom {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes pop-up-zoom {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 }
 
 .footer {
