--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html {
 *:before,
 *:after {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -60,8 +60,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .header .header__inner .header__logo {
@@ -105,7 +105,7 @@ body {
   top: 50%;
   right: -16px;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   width: 3px;
   height: 3px;
   background-color: #434759;
@@ -129,13 +129,11 @@ body {
   text-decoration: underline;
 }
 
-.sticky {
+/* .sticky {
   padding: 16px 0 11px;
   border-color: transparent;
-  -webkit-transition: all 0.5s linear;
   transition: all 0.5s linear;
-}
-
+} */
 .slider {
   height: 600px;
   width: 100%;
@@ -158,7 +156,7 @@ body {
   left: 0;
   width: 20px;
   height: 30px;
-  background-image: url("assets/img/slider/arrow-left.svg");
+  background-image: url('assets/img/slider/arrow-left.svg');
   background-repeat: no-repeat;
   background-position: center center;
   -webkit-transition: all 0.2s linear;
@@ -169,17 +167,17 @@ body {
 
 .slider .slider__inner .slider__prev:hover {
   -webkit-transform: translateX(-2px) scale(1.1);
-          transform: translateX(-2px) scale(1.1);
+  transform: translateX(-2px) scale(1.1);
   -webkit-transform-origin: center center;
-          transform-origin: center center;
+  transform-origin: center center;
   z-index: 99;
 }
 
 .slider .slider__inner .slider__prev:active {
   -webkit-transform: translateX(0) scale(1);
-          transform: translateX(0) scale(1);
+  transform: translateX(0) scale(1);
   -webkit-transform-origin: center center;
-          transform-origin: center center;
+  transform-origin: center center;
   z-index: 99;
 }
 
@@ -191,7 +189,12 @@ body {
   position: absolute;
   top: 53px;
   left: 72px;
+  border-radius: 30px;
   cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   z-index: 2;
 }
 
@@ -203,7 +206,7 @@ body {
   width: 188px;
   height: 333px;
   background-color: #000000;
-  background-image: url("assets/img/slider/iphone-vertical-pic-full.png");
+  background-image: url('assets/img/slider/iphone-vertical-pic-full.png');
   background-repeat: no-repeat;
   background-size: inherit;
   background-position: -14px -135px;
@@ -226,7 +229,7 @@ body {
   content: '';
   width: 240px;
   height: 483px;
-  background-image: url("assets/img/slider/iphone-vertical-shadow.png");
+  background-image: url('assets/img/slider/iphone-vertical-shadow.png');
   background-size: cover;
   background-position: 0 0;
   z-index: 1;
@@ -236,7 +239,12 @@ body {
   position: absolute;
   top: 174px;
   right: 97px;
+  border-radius: 30px;
   cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   z-index: 2;
 }
 
@@ -248,7 +256,7 @@ body {
   width: 333px;
   height: 188px;
   background-color: #000000;
-  background-image: url("assets/img/slider/iphone-horizontal-pic-full.png");
+  background-image: url('assets/img/slider/iphone-horizontal-pic-full.png');
   background-size: inherit;
   background-position: -125px -119px;
   opacity: 1;
@@ -270,7 +278,7 @@ body {
   content: '';
   width: 483px;
   height: 240px;
-  background-image: url("assets/img/slider/iphone-horizontal-shadow.png");
+  background-image: url('assets/img/slider/iphone-horizontal-shadow.png');
   background-size: cover;
   background-position: 0 0;
   z-index: 1;
@@ -285,6 +293,10 @@ body {
   top: 43px;
   left: 252px;
   cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .slider .slider__inner .slider__iphone_middle .slider__iphone_middle_pic {
@@ -295,7 +307,7 @@ body {
   width: 199px;
   height: 354px;
   background-color: #000000;
-  background-image: url("assets/img/slider/iphone-middle-pic.png");
+  background-image: url('assets/img/slider/iphone-middle-pic.png');
   opacity: 1;
   -webkit-transition: opacity 0.5s linear;
   transition: opacity 0.5s linear;
@@ -314,7 +326,7 @@ body {
   right: -2px;
   width: 20px;
   height: 30px;
-  background-image: url("assets/img/slider/arrow-right.svg");
+  background-image: url('assets/img/slider/arrow-right.svg');
   background-repeat: no-repeat;
   background-position: center center;
   -webkit-transition: all 0.2s linear;
@@ -325,17 +337,17 @@ body {
 
 .slider .slider__inner .slider__next:hover {
   -webkit-transform: translateX(2px) scale(1.1);
-          transform: translateX(2px) scale(1.1);
+  transform: translateX(2px) scale(1.1);
   -webkit-transform-origin: center center;
-          transform-origin: center center;
+  transform-origin: center center;
   z-index: 99;
 }
 
 .slider .slider__inner .slider__next:active {
   -webkit-transform: translateX(0) scale(1);
-          transform: translateX(0) scale(1);
+  transform: translateX(0) scale(1);
   -webkit-transform-origin: center center;
-          transform-origin: center center;
+  transform-origin: center center;
   z-index: 99;
 }
 
@@ -349,7 +361,7 @@ body {
 .phone {
   display: none;
   -webkit-animation: 0.7s ease-in-out;
-          animation: 0.7s ease-in-out;
+  animation: 0.7s ease-in-out;
 }
 
 .slider-active,
@@ -365,23 +377,23 @@ body {
 
 .to-left {
   -webkit-animation-name: left;
-          animation-name: left;
+  animation-name: left;
 }
 
 .from-right {
   -webkit-animation-name: right;
-          animation-name: right;
+  animation-name: right;
 }
 
 .to-right {
   -webkit-animation-name: right;
-          animation-name: right;
+  animation-name: right;
   animation-direction: reverse;
 }
 
 .from-left {
   -webkit-animation-name: left;
-          animation-name: left;
+  animation-name: left;
   animation-direction: reverse;
 }
 
@@ -433,6 +445,7 @@ body {
   min-height: 500px;
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
+  scroll-margin-top: 50px;
 }
 
 .services .services__inner {
@@ -466,10 +479,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   list-style-type: none;
 }
 
@@ -525,32 +538,33 @@ body {
 }
 
 .services .services__inner .services__list .services__list_pen:after {
-  background: url("assets/img/our-services/pen.svg") no-repeat center center;
+  background: url('assets/img/our-services/pen.svg') no-repeat center center;
 }
 
 .services .services__inner .services__list .services__list_bulb:after {
-  background: url("assets/img/our-services/bulb.svg") no-repeat center center;
+  background: url('assets/img/our-services/bulb.svg') no-repeat center center;
 }
 
 .services .services__inner .services__list .services__list_heart:after {
-  background: url("assets/img/our-services/heart.svg") no-repeat center center;
+  background: url('assets/img/our-services/heart.svg') no-repeat center center;
 }
 
 .services .services__inner .services__list .services__list_phone:after {
-  background: url("assets/img/our-services/phone.svg") no-repeat center center;
+  background: url('assets/img/our-services/phone.svg') no-repeat center center;
 }
 
 .services .services__inner .services__list .services__list_dialog:after {
-  background: url("assets/img/our-services/dialog.svg") no-repeat center center;
+  background: url('assets/img/our-services/dialog.svg') no-repeat center center;
 }
 
 .services .services__inner .services__list .services__list_star:after {
-  background: url("assets/img/our-services/star.svg") no-repeat center center;
+  background: url('assets/img/our-services/star.svg') no-repeat center center;
 }
 
 .portfolio {
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
+  scroll-margin-top: 50px;
 }
 
 .portfolio .portfolio__inner {
@@ -630,7 +644,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   max-width: 940px;
   max-height: 601px;
   overflow: hidden;
@@ -655,8 +669,8 @@ body {
 }
 
 .portfolio .portfolio__inner .portfolio__images ul li img:hover {
-  -webkit-filter: opacity(0.7);
-          filter: opacity(0.7);
+  -webkit-filter: invert(1);
+  filter: invert(1);
 }
 
 .portfolio .portfolio__inner .portfolio__images ul li img.active {
@@ -666,6 +680,7 @@ body {
 .about {
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
+  scroll-margin-top: 50px;
 }
 
 .about .about__inner {
@@ -701,10 +716,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   max-width: 940px;
   overflow: hidden;
 }
@@ -747,7 +762,7 @@ body {
 
 .about .about__inner .about__team_item:nth-child(2) {
   -webkit-transform: translateX(-1px);
-          transform: translateX(-1px);
+  transform: translateX(-1px);
 }
 
 .about .about__inner .about__team ul {
@@ -762,11 +777,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-right: 8px;
   width: 32px;
   height: 32px;
@@ -802,6 +817,7 @@ body {
 .quote {
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
+  scroll-margin-top: 50px;
 }
 
 .quote .quote__inner {
@@ -862,10 +878,14 @@ body {
 
 .quote .quote__inner .quote__info .quote__info_form input:invalid {
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
-.quote .quote__inner .quote__info .quote__info_form input::-webkit-input-placeholder {
+.quote
+  .quote__inner
+  .quote__info
+  .quote__info_form
+  input::-webkit-input-placeholder {
   font-family: 'Lato Regular', sans-serif;
   font-size: 1.2rem;
   font-weight: 400;
@@ -873,7 +893,11 @@ body {
   letter-spacing: 0.1px;
 }
 
-.quote .quote__inner .quote__info .quote__info_form input:-ms-input-placeholder {
+.quote
+  .quote__inner
+  .quote__info
+  .quote__info_form
+  input:-ms-input-placeholder {
   font-family: 'Lato Regular', sans-serif;
   font-size: 1.2rem;
   font-weight: 400;
@@ -881,7 +905,11 @@ body {
   letter-spacing: 0.1px;
 }
 
-.quote .quote__inner .quote__info .quote__info_form input::-ms-input-placeholder {
+.quote
+  .quote__inner
+  .quote__info
+  .quote__info_form
+  input::-ms-input-placeholder {
   font-family: 'Lato Regular', sans-serif;
   font-size: 1.2rem;
   font-weight: 400;
@@ -914,7 +942,11 @@ body {
   resize: none;
 }
 
-.quote .quote__inner .quote__info .quote__info_form textarea::-webkit-input-placeholder {
+.quote
+  .quote__inner
+  .quote__info
+  .quote__info_form
+  textarea::-webkit-input-placeholder {
   color: #f48c8f;
   font-family: 'Lato Regular', sans-serif;
   font-size: 1.2rem;
@@ -922,7 +954,11 @@ body {
   letter-spacing: -0.01px;
 }
 
-.quote .quote__inner .quote__info .quote__info_form textarea:-ms-input-placeholder {
+.quote
+  .quote__inner
+  .quote__info
+  .quote__info_form
+  textarea:-ms-input-placeholder {
   color: #f48c8f;
   font-family: 'Lato Regular', sans-serif;
   font-size: 1.2rem;
@@ -930,7 +966,11 @@ body {
   letter-spacing: -0.01px;
 }
 
-.quote .quote__inner .quote__info .quote__info_form textarea::-ms-input-placeholder {
+.quote
+  .quote__inner
+  .quote__info
+  .quote__info_form
+  textarea::-ms-input-placeholder {
   color: #f48c8f;
   font-family: 'Lato Regular', sans-serif;
   font-size: 1.2rem;
@@ -1010,45 +1050,81 @@ body {
   vertical-align: top;
 }
 
-.quote .quote__inner .quote__info .quote__info_contact address ul li:nth-child(1) {
+.quote
+  .quote__inner
+  .quote__info
+  .quote__info_contact
+  address
+  ul
+  li:nth-child(1) {
   letter-spacing: -0.15px;
 }
 
-.quote .quote__inner .quote__info .quote__info_contact address ul li:nth-child(1):before {
+.quote
+  .quote__inner
+  .quote__info
+  .quote__info_contact
+  address
+  ul
+  li:nth-child(1):before {
   content: '';
   position: absolute;
   top: 4px;
   left: 0;
-  background: url("assets/img/get-a-quote/location.svg") no-repeat;
+  background: url('assets/img/get-a-quote/location.svg') no-repeat;
   width: 12px;
   height: 12px;
 }
 
-.quote .quote__inner .quote__info .quote__info_contact address ul li:nth-child(2) {
+.quote
+  .quote__inner
+  .quote__info
+  .quote__info_contact
+  address
+  ul
+  li:nth-child(2) {
   letter-spacing: -0.2px;
 }
 
-.quote .quote__inner .quote__info .quote__info_contact address ul li:nth-child(2):before {
+.quote
+  .quote__inner
+  .quote__info
+  .quote__info_contact
+  address
+  ul
+  li:nth-child(2):before {
   content: '';
   position: absolute;
   top: 4px;
   left: 0;
-  background: url("assets/img/get-a-quote/phone.svg") no-repeat;
+  background: url('assets/img/get-a-quote/phone.svg') no-repeat;
   background-size: 95%;
   width: 12px;
   height: 12px;
 }
 
-.quote .quote__inner .quote__info .quote__info_contact address ul li:nth-child(3) {
+.quote
+  .quote__inner
+  .quote__info
+  .quote__info_contact
+  address
+  ul
+  li:nth-child(3) {
   letter-spacing: 0.01px;
 }
 
-.quote .quote__inner .quote__info .quote__info_contact address ul li:nth-child(3):before {
+.quote
+  .quote__inner
+  .quote__info
+  .quote__info_contact
+  address
+  ul
+  li:nth-child(3):before {
   content: '';
   position: absolute;
   top: 6px;
   left: 0;
-  background: url("assets/img/get-a-quote/envelope.svg") no-repeat;
+  background: url('assets/img/get-a-quote/envelope.svg') no-repeat;
   width: 13px;
   height: 12px;
 }
@@ -1069,7 +1145,6 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow-y: none;
   background-color: rgba(0, 0, 0, 0.9);
 }
 
@@ -1078,11 +1153,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .pop-up .pop-up__inner .pop-up__message {
@@ -1090,19 +1165,22 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   width: 400px;
+  height: 274px;
+  overflow: auto;
+  text-align: justify;
   border-radius: 5px;
   background-color: #f06c64;
   -webkit-animation-name: pop-up-zoom;
-          animation-name: pop-up-zoom;
+  animation-name: pop-up-zoom;
   -webkit-animation-duration: 0.3s;
-          animation-duration: 0.3s;
+  animation-duration: 0.3s;
 }
 
 .pop-up .pop-up__inner .pop-up__message h3 {
@@ -1117,6 +1195,8 @@ body {
 
 .pop-up .pop-up__inner .pop-up__message .pop-up__message_subject {
   margin-bottom: 10px;
+  max-width: 350px;
+  word-wrap: break-word;
 }
 
 .pop-up .pop-up__inner .pop-up__message .pop-up__message_subject p {
@@ -1136,6 +1216,8 @@ body {
 
 .pop-up .pop-up__inner .pop-up__message .pop-up__message_description {
   margin-bottom: 40px;
+  max-width: 350px;
+  word-wrap: break-word;
 }
 
 .pop-up .pop-up__inner .pop-up__message .pop-up__message_description p {
@@ -1182,30 +1264,30 @@ body {
 @-webkit-keyframes pop-up-zoom {
   0% {
     -webkit-transform: scale(0);
-            transform: scale(0);
+    transform: scale(0);
   }
   50% {
     -webkit-transform: scale(1.1);
-            transform: scale(1.1);
+    transform: scale(1.1);
   }
   100% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
 }
 
 @keyframes pop-up-zoom {
   0% {
     -webkit-transform: scale(0);
-            transform: scale(0);
+    transform: scale(0);
   }
   50% {
     -webkit-transform: scale(1.1);
-            transform: scale(1.1);
+    transform: scale(1.1);
   }
   100% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
 }
 
@@ -1218,8 +1300,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   padding: 22px 0;
 }
 
@@ -1246,7 +1328,7 @@ body {
   top: 50%;
   left: 0;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   width: 2px;
   height: 2px;
   background-color: #434759;
@@ -1264,11 +1346,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-right: 8px;
   width: 32px;
   height: 32px;
@@ -1323,4 +1405,3 @@ body {
     letter-spacing: -0.06px !important;
   }
 }
-/*# sourceMappingURL=style.css.map */
